<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.dashboard.DashboardFragment">

    <TextView
        android:id="@+id/tvspeed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:textAlignment="textEnd"
        android:textColor="@color/purple_700"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/diametro"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints=""
                android:gravity="center"
                android:hint="@string/diametrotext"
                android:inputType="numberDecimal"
                android:nextFocusRight="@id/vueltas"
                android:nextFocusDown="@id/vueltas"
                android:nextFocusForward="@id/vueltas" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="80dp"
            android:layout_height="45dp"
            android:gravity="center"
            android:text="@string/m"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/vueltas"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:hint="@string/n"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                android:nextFocusLeft="@id/diametro"
                android:nextFocusRight="@id/botonVelocidad"
                android:nextFocusUp="@id/diametro"
                android:nextFocusDown="@id/botonVelocidad"
                android:nextFocusForward="@id/botonVelocidad" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="80dp"
            android:layout_height="45dp"
            android:gravity="center"
            android:text="@string/n_m"
            android:textSize="24sp" />
    </LinearLayout>

    <Button
        android:id="@+id/botonVelocidad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/calcular" />

    <TextView
        android:id="@+id/text_dashboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
        android:textSize="20sp"
        android:visibility="invisible" />


</LinearLayout>